<resources>
    <string name="app_name">Intersvyaz testovoe</string>
    <string name="title_list">Список</string>
    <string name="title_favourites">Избранное</string>
    <string name="title_detailed">Детальный экран</string>
    <string name="request_hint">Введите название</string>
    <string name="no_connection_message">Отсутствует подключение к интернету</string>
    <string name="share">Поделиться</string>
    <string name="save">Сохранить</string>
    <string name="remind">Напомнить</string>
    <string name="permission_required">Необходимо разрешение</string>
    <string name="permission_required_message">Необходимо разрешение для сохранения изображений из интернета.</string>
    <string name="allow">Разрешить</string>
    <string name="deny">Запретить</string>
    <string name="downloading">Загрузка</string>
    <string name="share_image">Поделиться изображением</string>
    <string name="channel_name">reminder channel</string>
    <string name="channel_desc">desc</string>
    <string name="cancel">Отмена</string>
    <string name="done">Готово</string>
    <string name="minutes_15">Через 15 минут</string>
    <string name="next_day">Через сутки</string>
    <string name="next_week">Через 7 суток</string>
    <string name="hour_1">Через 1 час</string>
    <string name="reminder">Напоминание</string>
    <string name="time_to_come_back">Пора вернуться!</string>
    <string name="reminder_created">Создано напоминание для %1$s</string>
    <string name="reminder_created_text">%1$s напомним вернуться к элементу %2$s.</string>
    <string name="permission_required_message_notifications">Необходимо разрешение для отправки уведомлений. </string>
    <string name="api_error">Ошибка API</string>
    <string name="delete">Удалить\n</string>
    <string name="name">Название</string>
    <string name="desc">Описание</string>
    <string name="yes">Да\n</string>
    <string name="no">Нет\n</string>
    <string name="alert_check">Вы уверены?</string>
    <string name="save_alert">Изменения будут сохранены</string>
    <string name="delete_alert">Запись будет удалена</string>
    <string name="no_data_found">Элементов не обнаружено</string>
    <string name="search">Поиск</string>
</resources>