<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.haidit.intersvyaztestovoe.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_navigation_detailed"
            app:destination="@id/navigation_detailed" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.haidit.intersvyaztestovoe.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/navigation_detailed"
        android:name="com.haidit.intersvyaztestovoe.ui.detailed.DetailedFragment"
        android:label="@string/title_detailed"
        tools:layout="@layout/fragment_detailed" >
        <argument
            android:name="itemName" />
        <argument
            android:name="itemDesc" />
        <argument
            android:name="itemPicture" />
    </fragment>

</navigation>